--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Defendiendo los Derechos, Celebrando la Dignidad de los Adultos Mayores en [Nombre de tu País/Región]</h1>
-                <p>En [Nombre de tu Fundación], trabajamos incansablemente para asegurar que los adultos mayores vivan con respeto, seguridad y oportunidades.</p>
+                <p>En FUDDIAM, trabajamos incansablemente para asegurar que los adultos mayores vivan con respeto, seguridad y oportunidades.</p>
                 <a href="#proyectos" class="btn btn-primary">Conoce Nuestra Labor</a>
             </div>
             <div class="hero-image">
