--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <h2>Quiénes Somos</h2>
             <p>Somos una organización sin fines de lucro dedicada a combatir la soledad y el aislamiento social de las personas mayores. Creemos que todos merecen tener compañía y sentirse queridos, independientemente de su edad. Nuestro equipo está compuesto por voluntarios comprometidos que ofrecen amistad y apoyo a las personas mayores en sus hogares, centros de día y comunidades.</p>
-            <img src="imagen-quienes-somos.jpg" alt="Equipo de Grandes Amigos">
+            <img src="quienes-somos.jpg" alt="Equipo de Grandes Amigos">
         </div>
     </section>
 
@@ -104,12 +104,35 @@
                 <li><a href="https://www.instagram.com/grandesamigos" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
                 <li><a href="https://twitter.com/GrandesAmigos" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
             </ul>
+            <ul>
+                <a href="https://www.facebook.com/TuPaginaDeFacebook" target="_blank">
+                 <img src="icono-facebook.png" alt="Facebook">
+                </a>
+                <a href="https://twitter.com/TuCuentaDeTwitter" target="_blank">
+                  <img src="icono-twitter.png" alt="Twitter">
+                </a>
+                <a href="https://www.instagram.com/TuCuentaDeInstagram" target="_blank">
+                  <img src="icono-instagram.png" alt="Instagram">
+                </a>
+                <a href="https://www.linkedin.com/company/TuPaginaDeLinkedIn" target="_blank">
+                  <img src="icono-linkedin.png" alt="LinkedIn">
+                </a>
+                <a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank">
+                  <img src="icono-youtube.png" alt="YouTube">
+                </a>
+                <a href="https://www.pinterest.com/TuPerfilDePinterest" target="_blank">
+                  <img src="icono-pinterest.png" alt="Pinterest">
+                </a>
+                <a href="https://wa.me/TuNumeroDeTelefono" target="_blank">
+                  <img src="icono-whatsapp.png" alt="WhatsApp">
+                </a>
+           </ul>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Grandes Amigos. Todos los derechos reservados.</p>
+            <p>&copy; 2025 FUDDIAM. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
