--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <h2>Quiénes Somos</h2>
             <p>Somos una organización sin fines de lucro dedicada a combatir la soledad y el aislamiento social de las personas mayores. Creemos que todos merecen tener compañía y sentirse queridos, independientemente de su edad. Nuestro equipo está compuesto por voluntarios comprometidos que ofrecen amistad y apoyo a las personas mayores en sus hogares, centros de día y comunidades.</p>
-            <img src="quienes-somos.jpg" alt="Equipo de Grandes Amigos">
+            <img src="quienes-somos.png" alt="Equipo de Grandes Amigos">
         </div>
     </section>
 
@@ -96,13 +96,13 @@
         <div class="container">
             <h2>Contacto</h2>
             <p>Si tienes alguna pregunta o deseas unirte a nuestro equipo de voluntarios, por favor contáctanos.</p>
-            <p>Teléfono: +54 11 4321-1234</p>
-            <p>Correo electrónico: info@grandesamigos.org</p>
+            <p>Teléfono: +809.512.2333</p>
+            <p>Correo electrónico: fuddiamsc@gmail.com</p>
             <p>Redes sociales:</p>
             <ul>
-                <li><a href="https://www.facebook.com/GrandesAmigos" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                <li><a href="https://www.instagram.com/grandesamigos" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a href="https://twitter.com/GrandesAmigos" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.facebook.com/fuddiamsc" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                <li><a href="https://www.instagram.com/fuddiamsc" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+                <li><a href="https://twitter.com/fuddiamsc" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
             </ul>
             <ul>
                 <a href="https://www.facebook.com/TuPaginaDeFacebook" target="_blank">
