--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <h2>Quiénes Somos</h2>
             <p>Somos una organización sin fines de lucro dedicada a combatir la soledad y el aislamiento social de las personas mayores. Creemos que todos merecen tener compañía y sentirse queridos, independientemente de su edad. Nuestro equipo está compuesto por voluntarios comprometidos que ofrecen amistad y apoyo a las personas mayores en sus hogares, centros de día y comunidades.</p>
-            <img src="quienes-somos.png" alt="Equipo de Grandes Amigos">
+            <img src="quienes-somos.png" alt="Equipo de FUDDIAM">
         </div>
     </section>
 
@@ -53,6 +53,7 @@
                 <li>Grupos de apoyo</li>
                 <li>Talleres y actividades recreativas</li>
             </ul>
+            <img src="que-puedes-hacer.png" alt="Equipo de Grandes Amigos">
         </div>
     </section>
 
