--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <section id="inicio" class="hero">
         <div class="container">
-            <h1>Grandes Amigos</h1>
-            <p>Ayudando a personas mayores en soledad</p>
+            <h1>Fundación por los Derechos y Dignidad Del Adulto Mayor</h1>
+            <p>Ayudando a personas mayores a mejorar sus derechos y dignidad</p>
             <a href="#como-ayudamos" class="btn">Conoce cómo ayudamos</a>
         </div>
     </section>
