--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                 <li><a href="https://www.instagram.com/fuddiamsc" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
                 <li><a href="https://twitter.com/fuddiamsc" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
             </ul>
+        </div>
+            <div class="redes-sociales">
             <ul>
                 <a href="https://www.facebook.com/TuPaginaDeFacebook" target="_blank">
                  <img src="icono-facebook.png" alt="Facebook">
