--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                 <li><a href="https://www.facebook.com/fuddiamsc" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
                 <li><a href="https://www.instagram.com/fuddiamsc" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
                 <li><a href="https://twitter.com/fuddiamsc" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://wa.me/TuNumeroDeTelefono" target="_blank">
+                    <img src="icono-whatsapp.png" alt="WhatsApp">
+                </a>
+                </li>
+                <li>
+                  <a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank">
+                  <img src="icono-youtube.png" alt="YouTube">
+                </li>
             </ul>
         </div>
             <div class="redes-sociales">
