--- a/index.html
+++ b/index.html
@@ -104,15 +104,9 @@
             <ul>
                 <li><a href="https://www.facebook.com/fuddiamsc" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
                 <li><a href="https://www.instagram.com/fuddiamsc" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a href="https://twitter.com/fuddiamsc" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
-                <li><a href="https://wa.me/TuNumeroDeTelefono" target="_blank">
-                    <img src="icono-whatsapp.png" alt="WhatsApp">
-                </a>
-                </li>
-                <li>
-                  <a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank">
-                  <img src="icono-youtube.png" alt="YouTube">
-                </li>
+                <li><a href="https://twitter.com/fuddiamsc" target="_blank"><img src="icono-twitter.png" alt="Twitter"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"> <i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube</li>
             </ul>
             </div>
         </div>
