--- a/index.html
+++ b/index.html
@@ -3,97 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundación por los Derechos y Dignidad Del Adulto Mayor</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Fundación por los Derechos y Dignidad de los Adultos Mayores</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
-                <img src="logo.png" alt="Logo de Grandes Amigos">
+            <a href="/" class="logo">
+                <img src="src/img/logo.png" alt="Logo de la Fundación">
             </a>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#quienes-somos">Quiénes Somos</a></li>
-                    <li><a href="#como-ayudamos">Cómo Ayudamos</a></li>
-                    <li><a href="#nuestros-programas">Nuestros Programas</a></li>
-                    <li><a href="#como-donar">Cómo Donar</a></li>
+                    <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
+                    <li><a href="#noticias">Noticias y Eventos</a></li>
+                    <li><a href="#voluntariado">Voluntariado</a></li>
+                    <li><a href="#donaciones">Donaciones</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
+            <button class="donar-btn">Donar</button>
         </div>
     </header>
 
-    <section id="inicio" class="hero">
+    <section id="banner" class="hero">
         <div class="container">
-            <h1>Fundación por los Derechos y Dignidad Del Adulto Mayor</h1>
-            <p>Ayudando a personas mayores a mejorar sus derechos y dignidad</p>
-            <a href="#como-ayudamos" class="btn">Conoce cómo ayudamos</a>
+            <div class="hero-content">
+                <h1>Defendiendo los Derechos, Celebrando la Dignidad de los Adultos Mayores en República Dominicana</h1>
+                <p>En FUDDIAM, trabajamos incansablemente para asegurar que los adultos mayores vivan con respeto, seguridad y oportunidades.</p>
+                <a href="#proyectos" class="btn btn-primary">Conoce Nuestra Labor</a>
+            </div>
+            <div class="hero-image">
+                <img src="src/img/banner.jpg" alt="Adultos mayores sonriendo">
+            </div>
         </div>
     </section>
 
-    <section id="quienes-somos" class="section">
+    <section id="nosotros" class="section">
         <div class="container">
-            <h2>Quiénes Somos</h2>
-            <p>Somos una organización sin fines de lucro dedicada a combatir la soledad y el aislamiento social de las personas mayores. Creemos que todos merecen tener compañía y sentirse queridos, independientemente de su edad. Nuestro equipo está compuesto por voluntarios comprometidos que ofrecen amistad y apoyo a las personas mayores en sus hogares, centros de día y comunidades.</p>
-            <img src="quienes-somos.png" alt="Equipo de FUDDIAM">
+            <h2>Nuestra Misión y Visión</h2>
+            <div class="nosotros-content">
+                <p>Somos una organización comprometida con la promoción y protección de los derechos y la dignidad de los adultos mayores en la República Dominicana. Creemos firmemente en una sociedad donde la edad sea celebrada y no sea una barrera para la participación plena.</p>
+                <h3>Nuestra Misión</h3>
+                <p>Empoderar a los adultos mayores a través de la defensa de sus derechos, la provisión de apoyo integral y la creación de conciencia sobre sus necesidades y contribuciones a la sociedad.</p>
+                <h3>Nuestra Visión</h3>
+                <p>Visualizamos un futuro donde cada adulto mayor en República Dominicana viva con dignidad, respeto, seguridad y tenga acceso a las oportunidades necesarias para una vida plena y saludable.</p>
+                <p><strong>Nuestros Valores:</strong> Respeto, Dignidad, Justicia, Empatía, Colaboración.</p>
+                <p><strong>Nuestra Historia:</strong> [Breve resumen de la historia de la fundación, puedes añadir más detalles en una subpágina si es necesario].</p>
+                <p><strong>Nuestro Equipo:</strong> [Presentación breve de los miembros clave, puedes añadir más detalles en una subpágina si es necesario].</p>
+                <p><strong>Transparencia:</strong> [Información sobre la transparencia de la fundación, informes anuales, etc., puedes añadir más detalles en una subpágina si es necesario].</p>
+            </div>
         </div>
     </section>
 
-    <section id="como-ayudamos" class="section">
+    <section id="proyectos" class="section bg-light">
         <div class="container">
-            <h2>Cómo Ayudamos</h2>
-            <p>Ofrecemos una variedad de servicios para ayudar a las personas mayores a combatir la soledad y el aislamiento social. Algunos de nuestros programas incluyen:</p>
-            <ul>
-                <li>Visitas regulares a domicilio</li>
-                <li>Acompañamiento en actividades sociales</li>
-                <li>Llamadas telefónicas de amistad</li>
-                <li>Grupos de apoyo</li>
-                <li>Talleres y actividades recreativas</li>
-            </ul>
-            <img src="que-puedes-hacer.png" alt="Equipo de Grandes Amigos">
-        </div>
-    </section>
-
-    <section id="nuestros-programas" class="section">
-        <div class="container">
-            <h2>Nuestros Programas</h2>
-            <div class="programas-grid">
-                <div class="programa">
-                    <h3>Visitas a Domicilio</h3>
-                    <p>Nuestros voluntarios visitan regularmente a personas mayores en sus hogares para brindar compañía y apoyo.</p>
+            <h2>Nuestros Proyectos en Acción</h2>
+            <p class="section-description">A través de nuestros diversos proyectos, abordamos las necesidades más apremiantes de los adultos mayores en [Nombre de tu País/Región].</p>
+            <div class="proyectos-grid">
+                <div class="proyecto">
+                    <img src="src/img/proyecto1.jpg" alt="Proyecto de Apoyo Domiciliario">
+                    <h3>Programa de Apoyo Domiciliario</h3>
+                    <p>Brindamos asistencia y acompañamiento a adultos mayores que necesitan apoyo en sus hogares, mejorando su calidad de vida y permitiéndoles mantener su independencia.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
-                <div class="programa">
-                    <h3>Acompañamiento en Actividades Sociales</h3>
-                    <p>Acompañamos a personas mayores a eventos sociales, actividades culturales y excursiones.</p>
+                <div class="proyecto">
+                    <img src="src/img/proyecto2.png" alt="Talleres de Envejecimiento Activo">
+                    <h3>Talleres de Envejecimiento Activo</h3>
+                    <p>Organizamos talleres y actividades que promueven la salud física y mental, la participación social y el aprendizaje continuo entre los adultos mayores.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
-                <div class="programa">
-                    <h3>Llamadas Telefónicas de Amistad</h3>
-                    <p>Nuestros voluntarios realizan llamadas telefónicas regulares a personas mayores para mantenerlas conectadas y brindarles compañía.</p>
+                <div class="proyecto">
+                    <img src="src/img/proyecto3.webp" alt="Asesoría Legal para Adultos Mayores">
+                    <h3>Asesoría Legal para Adultos Mayores</h3>
+                    <p>Ofrecemos asesoramiento legal gratuito y representación a adultos mayores que enfrentan problemas legales relacionados con sus derechos.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
-                <div class="programa">
-                    <h3>Grupos de Apoyo</h3>
-                    <p>Facilitamos grupos de apoyo para personas mayores que enfrentan desafíos similares, como la pérdida de un ser querido o la soledad.</p>
                 </div>
-                <div class="programa">
-                    <h3>Talleres y Actividades Recreativas</h3>
-                    <p>Organizamos talleres y actividades recreativas para promover la interacción social y el bienestar de las personas mayores.</p>
+                <div class="proyectos-grid">
+                <div class="proyecto">
+                    <img src="img/proyecto4.jpg" alt="Proyecto de Combate al Aislamiento Social">
+                    <h3>Proyecto de Combate al Aislamiento Social</h3>
+                    <p>Implementamos iniciativas para conectar a los adultos mayores, fomentar la creación de redes de apoyo y reducir la soledad.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
+                </div>
+                <div class="proyecto">
+                    <img src="img/proyecto5.jpg" alt="Programa de Capacitación para Cuidadores">
+                    <h3>Programa de Capacitación para Cuidadores</h3>
+                    <p>Ofrecemos capacitación y apoyo a familiares y profesionales que cuidan de adultos mayores, mejorando la calidad del cuidado.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
+                </div>
+                <div class="proyecto">
+                    <img src="img/proyecto6.jpg" alt="Proyecto de Promoción de la Salud Financiera">
+                    <h3>Proyecto de Promoción de la Salud Financiera</h3>
+                    <p>Brindamos herramientas y recursos para ayudar a los adultos mayores a gestionar sus finanzas, prevenir fraudes y asegurar su bienestar económico.</p>
+                    <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="como-donar" class="section">
+    <section id="noticias" class="section">
         <div class="container">
-            <h2>Cómo Donar</h2>
-            <p>Tus donaciones son esenciales para que podamos continuar brindando nuestros servicios a las personas mayores en necesidad. Puedes hacer una donación en línea o por transferencia bancaria.</p>
-            <a href="#" class="btn">Donar Ahora</a>
+            <h2>Noticias y Eventos</h2>
+            <div class="noticias-grid">
+                <div class="noticia">
+                    <img src="img/noticia1.jpg" alt="Noticia sobre derechos">
+                    <h3>Última Noticia: Avanzan Leyes para Proteger los Derechos de los Adultos Mayores</h3>
+                    <p>Detalles sobre los recientes avances legislativos que buscan fortalecer la protección de los derechos de los adultos mayores en nuestra región.</p>
+                    <a href="#">Leer más</a>
+                </div>
+                <div class="noticia">
+                    <img src="img/evento1.jpg" alt="Evento benéfico">
+                    <h3>Próximo Evento Benéfico: Cena de Gala por la Dignidad de los Adultos Mayores</h3>
+                    <p>Únete a nosotros en nuestra cena anual de gala para recaudar fondos y apoyar nuestros programas. Información sobre la fecha, lugar y cómo adquirir entradas.</p>
+                    <a href="#">Más información</a>
+                </div>
+                <div class="noticia">
+                    <img src="img/noticia2.jpg" alt="Artículo sobre salud">
+                    <h3>Artículo: Consejos para Mantener una Buena Salud Mental en la Tercera Edad</h3>
+                    <p>Expertos comparten estrategias y consejos prácticos para que los adultos mayores cuiden su bienestar emocional.</p>
+                    <a href="#">Leer más</a>
+                </div>
+            </div>
+            <div class="noticias-grid">
+                <div class="noticia">
+                    <img src="img/evento2.jpg" alt="Taller para cuidadores">
+                    <h3>Taller Gratuito: Cuidado Integral del Adulto Mayor Dependiente</h3>
+                    <p>Invitamos a cuidadores familiares y profesionales a participar en este taller intensivo para adquirir habilidades y conocimientos esenciales.</p>
+                    <a href="#">Inscribirse</a>
+                </div>
+                <div class="noticia">
+                    <img src="img/noticia3.jpg" alt="Logro de la fundación">
+                    <h3>Logro: Nuestra Fundación Amplía su Programa de Apoyo Domiciliario</h3>
+                    <p>Gracias al apoyo de nuestros donantes, hemos podido expandir nuestro alcance y brindar asistencia a más adultos mayores en sus hogares.</p>
+                    <a href="#">Leer más</a>
+                </div>
+                <div class="noticia">
+                    <img src="img/evento3.jpg" alt="Campaña de concientización">
+                    <h3>Campaña de Concientización: Valoremos la Experiencia de los Adultos Mayores</h3>
+                    <p>Únete a nuestra campaña en redes sociales para compartir mensajes que resalten la importancia y el valor de los adultos mayores en nuestra sociedad.</p>
+                    <a href="#">Participar</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section id="contacto" class="section">
+    <section id="voluntariado" class="section bg-light">
+        <div class="container">
+            <h2>Únete a Nuestra Causa: Sé Voluntario</h2>
+            <p>Tu tiempo y talento pueden marcar una gran diferencia en la vida de los adultos mayores. Descubre cómo puedes contribuir como voluntario en [Nombre de tu Fundación].</p>
+            <div class="voluntariado-info">
+                <p><strong>Oportunidades de Voluntariado:</strong> Acompañamiento, apoyo en eventos, tareas administrativas, talleres, etc.</p>
+                <p><strong>Lo que Buscamos en un Voluntario:</strong> Compromiso, empatía, respeto, habilidades de comunicación.</p>
+                <p><strong>Beneficios de Ser Voluntario:</strong> Experiencia gratificante, conexión con la comunidad, desarrollo personal.</p>
+            </div>
+            <a href="#" class="btn btn-primary">Inscríbete como voluntario</a>
+        </div>
+    </section>
+
+    <section id="donaciones" class="section">
+        <div class="container">
+            <h2>Apoya Nuestra Labor: Dona Hoy</h2>
+            <p>Tu generosidad nos permite continuar brindando apoyo vital a los adultos mayores. Explora las diferentes formas en que puedes donar y el impacto que tu contribución puede tener.</p>
+            <div class="donaciones-info">
+                <p><strong>Formas de Donar:</strong> Donación en línea, transferencia bancaria, donación mensual, donación en especie.</p>
+                <p><strong>Impacto de tu Donación:</strong> Con $50 podemos proporcionar una semana de comidas a un adulto mayor vulnerable. Con $100 podemos financiar una sesión de asesoría legal.</p>
+            </div>
+            <button class="donar-btn large">Donar Ahora</button>
+        </div>
+    </section>
+
+    <section id="contacto" class="section bg-light">
+        <div class="container">
+            <h2>Contáctanos: Estamos Aquí para Ayudarte</h2>
+            <p>Ponte en contacto con nosotros para cualquier consulta o colaboración.</p>
+            <div class="contacto-info">
+                <p><strong>Dirección:</strong> [Tu Dirección]</p>
+                <p><strong>Teléfono:</strong> [Tu Número de Teléfono]</p>
+                <p><strong>Email:</strong> [Tu Correo Electrónico]</p>
+            </div>
+            <form class="formulario-contacto">
+                <input type="text" placeholder="Nombre">
+                <input type="email" placeholder="Correo Electrónico">
+                <textarea placeholder="Mensaje"></textarea>
+                <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Fundación por los Derechos y Dignidad de los Adultos Mayores. Todos los derechos reservados.</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Política de Privacidad</a></li>
+                    <li><a href="#">Términos y Condiciones</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
+    <script src="src/js/script.js"></script>
+     <section id="contacto" class="section">
         <div class="container">
             <h2>Contacto</h2>
             <p>Si tienes alguna pregunta o deseas unirte a nuestro equipo de voluntarios, por favor contáctanos.</p>
