--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundación por los Derechos y Dignidad de los Adultos Mayores</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
                 <a href="#proyectos" class="btn btn-primary">Conoce Nuestra Labor</a>
             </div>
             <div class="hero-image">
-                <img src="src/img/banner.jpg" alt="Adultos mayores sonriendo">
+                <img src="banner.jpg" alt="Adultos mayores sonriendo">
             </div>
         </div>
     </section>
@@ -71,13 +71,13 @@
                     <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
                 <div class="proyecto">
-                    <img src="src/img/proyecto2.png" alt="Talleres de Envejecimiento Activo">
+                    <img src="proyecto2.png" alt="Talleres de Envejecimiento Activo">
                     <h3>Talleres de Envejecimiento Activo</h3>
                     <p>Organizamos talleres y actividades que promueven la salud física y mental, la participación social y el aprendizaje continuo entre los adultos mayores.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
                 <div class="proyecto">
-                    <img src="src/img/proyecto3.webp" alt="Asesoría Legal para Adultos Mayores">
+                    <img src="proyecto3.webp" alt="Asesoría Legal para Adultos Mayores">
                     <h3>Asesoría Legal para Adultos Mayores</h3>
                     <p>Ofrecemos asesoramiento legal gratuito y representación a adultos mayores que enfrentan problemas legales relacionados con sus derechos.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
@@ -85,19 +85,19 @@
                 </div>
                 <div class="proyectos-grid">
                 <div class="proyecto">
-                    <img src="img/proyecto4.jpg" alt="Proyecto de Combate al Aislamiento Social">
+                    <img src="proyecto4.jpg" alt="Proyecto de Combate al Aislamiento Social">
                     <h3>Proyecto de Combate al Aislamiento Social</h3>
                     <p>Implementamos iniciativas para conectar a los adultos mayores, fomentar la creación de redes de apoyo y reducir la soledad.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
                 <div class="proyecto">
-                    <img src="img/proyecto5.jpg" alt="Programa de Capacitación para Cuidadores">
+                    <img src="proyecto5.jpg" alt="Programa de Capacitación para Cuidadores">
                     <h3>Programa de Capacitación para Cuidadores</h3>
                     <p>Ofrecemos capacitación y apoyo a familiares y profesionales que cuidan de adultos mayores, mejorando la calidad del cuidado.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
                 </div>
                 <div class="proyecto">
-                    <img src="img/proyecto6.jpg" alt="Proyecto de Promoción de la Salud Financiera">
+                    <img src="proyecto6.jpg" alt="Proyecto de Promoción de la Salud Financiera">
                     <h3>Proyecto de Promoción de la Salud Financiera</h3>
                     <p>Brindamos herramientas y recursos para ayudar a los adultos mayores a gestionar sus finanzas, prevenir fraudes y asegurar su bienestar económico.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
@@ -111,19 +111,19 @@
             <h2>Noticias y Eventos</h2>
             <div class="noticias-grid">
                 <div class="noticia">
-                    <img src="img/noticia1.jpg" alt="Noticia sobre derechos">
+                    <img src="noticia1.jpg" alt="Noticia sobre derechos">
                     <h3>Última Noticia: Avanzan Leyes para Proteger los Derechos de los Adultos Mayores</h3>
                     <p>Detalles sobre los recientes avances legislativos que buscan fortalecer la protección de los derechos de los adultos mayores en nuestra región.</p>
                     <a href="#">Leer más</a>
                 </div>
                 <div class="noticia">
-                    <img src="img/evento1.jpg" alt="Evento benéfico">
+                    <img src="evento1.jpg" alt="Evento benéfico">
                     <h3>Próximo Evento Benéfico: Cena de Gala por la Dignidad de los Adultos Mayores</h3>
                     <p>Únete a nosotros en nuestra cena anual de gala para recaudar fondos y apoyar nuestros programas. Información sobre la fecha, lugar y cómo adquirir entradas.</p>
                     <a href="#">Más información</a>
                 </div>
                 <div class="noticia">
-                    <img src="img/noticia2.jpg" alt="Artículo sobre salud">
+                    <img src="noticia2.jpg" alt="Artículo sobre salud">
                     <h3>Artículo: Consejos para Mantener una Buena Salud Mental en la Tercera Edad</h3>
                     <p>Expertos comparten estrategias y consejos prácticos para que los adultos mayores cuiden su bienestar emocional.</p>
                     <a href="#">Leer más</a>
@@ -131,19 +131,19 @@
             </div>
             <div class="noticias-grid">
                 <div class="noticia">
-                    <img src="img/evento2.jpg" alt="Taller para cuidadores">
+                    <img src="evento2.jpg" alt="Taller para cuidadores">
                     <h3>Taller Gratuito: Cuidado Integral del Adulto Mayor Dependiente</h3>
                     <p>Invitamos a cuidadores familiares y profesionales a participar en este taller intensivo para adquirir habilidades y conocimientos esenciales.</p>
                     <a href="#">Inscribirse</a>
                 </div>
                 <div class="noticia">
-                    <img src="img/noticia3.jpg" alt="Logro de la fundación">
+                    <img src="noticia3.jpg" alt="Logro de la fundación">
                     <h3>Logro: Nuestra Fundación Amplía su Programa de Apoyo Domiciliario</h3>
                     <p>Gracias al apoyo de nuestros donantes, hemos podido expandir nuestro alcance y brindar asistencia a más adultos mayores en sus hogares.</p>
                     <a href="#">Leer más</a>
                 </div>
                 <div class="noticia">
-                    <img src="img/evento3.jpg" alt="Campaña de concientización">
+                    <img src="evento3.jpg" alt="Campaña de concientización">
                     <h3>Campaña de Concientización: Valoremos la Experiencia de los Adultos Mayores</h3>
                     <p>Únete a nuestra campaña en redes sociales para compartir mensajes que resalten la importancia y el valor de los adultos mayores en nuestra sociedad.</p>
                     <a href="#">Participar</a>
