--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <a href="/" class="logo">
-                <img src="src/img/logo.png" alt="Logo de la Fundación">
+                <img src="logo.png" alt="Logo de la Fundación">
             </a>
             <nav>
                 <ul>
@@ -65,7 +65,7 @@
             <p class="section-description">A través de nuestros diversos proyectos, abordamos las necesidades más apremiantes de los adultos mayores en [Nombre de tu País/Región].</p>
             <div class="proyectos-grid">
                 <div class="proyecto">
-                    <img src="src/img/proyecto1.jpg" alt="Proyecto de Apoyo Domiciliario">
+                    <img src="proyecto1.jpg" alt="Proyecto de Apoyo Domiciliario">
                     <h3>Programa de Apoyo Domiciliario</h3>
                     <p>Brindamos asistencia y acompañamiento a adultos mayores que necesitan apoyo en sus hogares, mejorando su calidad de vida y permitiéndoles mantener su independencia.</p>
                     <a href="#" class="btn btn-secondary">Leer más</a>
