--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </form>
         </div>
     </section>
-   <!--
+  
     <footer>
         <div class="container">
             <p>&copy; 2025 Fundación por los Derechos y Dignidad de los Adultos Mayores. Todos los derechos reservados.</p>
@@ -206,8 +206,8 @@
             </nav>
         </div>
     </footer>
-   -->
-    <script src="src/js/script.js"></script>
+   
+    <script src="script.js"></script>
      <section id="contacto" class="section">
         <div class="container">
             <h2>Contacto</h2>
@@ -217,11 +217,21 @@
             <div class="redes-sociales">
             <p>Redes sociales:</p>
             <ul>
-                <li><a href="https://www.facebook.com/fuddiamsc" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                <li><a href="https://www.instagram.com/fuddiamsc" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a href="https://twitter.com/fuddiamsc" target="_blank"><img src="icono-twitter.png" alt="Twitter"><i class="fab fa-twitter"></i> Twitter</a></li>
-                <li><a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"> <i class="fab fa-twitter"></i> Twitter</a></li>
-                <li><a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube</li>
+                <li>
+                    <a href="https://www.facebook.com/fuddiamsc" target="_blank"><img src="icono-facebook.png" alt="Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/fuddiamsc" target="_blank"><img src="icono-instagram.png" alt="Instagram"><i class="fab fa-instagram"></i> Instagram </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/fuddiamsc" target="_blank"><img src="icono-twitter.png" alt="Twitter"><i class="fab fa-twitter"></i> Twitter</a>
+                </li>
+                <li>
+                    <a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"><i class="fab fa-twitter"></i> Twitter</a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
+                </li>
             </ul>
             </div>
         </div>
