--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <div class="contacto-info">
                 <h2>Contacto</h2>
                 <p>Si tienes alguna pregunta o deseas unirte a nuestro equipo de voluntarios, por favor contáctanos.</p>
-                <p><strong>Correo electrónico:</strong> fuddiamsc@gmail.com</p>
-                <p><strong>Dirección:</strong> Ave. 27 de Febrero #115</p>
+                <p><strong>Correo electrónico:</strong>fuddiamsc@gmail.com</p>
+                <p><strong>Dirección:</strong>Ave. 27 de Febrero #115</p>
                 <p><strong>Teléfono:</strong>+809.512.2333</p>  
             </div>
             <form class="formulario-contacto">
@@ -196,10 +196,7 @@
             </form>
         </div>
          <script src="script.js"></script>
-    <!-- <section id="contacto" class="section"> -->
-        <div class="container">
-            
-            
+    <!-- <section id="contacto" class="section"> -->     
             <div class="redes-sociales">
             <p>Redes sociales:</p>
             <ul>
@@ -216,7 +213,7 @@
                     <a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"><i class="fab fa-twitter"></i> Twitter</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/TuCanalDeYouTube" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
+                    <a href="https://www.youtube.com/channel/fuddiam" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
                 </li>
             </ul>
             </div>
