--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"><i class="fab fa-twitter"></i> Twitter</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/fuddiam" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
+                    <a href="https://www.youtube.com/@fuddiamsc" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
                 </li>
             </ul>
             </div>
