--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                     <a href="https://www.instagram.com/fuddiamsc" target="_blank"><img src="icono-instagram.png" alt="Instagram"><i class="fab fa-instagram"></i> Instagram </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/fuddiamsc" target="_blank"><img src="icono-twitter.png" alt="Twitter"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="https://twitter.com/fuddiamsc" target="_blank"><img src="icono-twitter.png" alt="Twitter"><i class="fab fa-twitter"></i>Twitter</a>
                 </li>
                 <li>
-                    <a href="https://wa.me/TuNumeroDeTelefono" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="https://wa.me/+18095192377" target="_blank"><img src="icono-whatsapp.png" alt="WhatsApp"><i class="fab fa-whatsapp"></i>WhatsApp</a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/@fuddiamsc" target="_blank"><img src="icono-youtube.png" alt="YouTube"><i class="fab fa-whatsapp"></i>Youtube
