--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,38 @@
     </div>
   </header>
 
+  <!-- Place this inside each page's <body> -->
+<header class="bg-white shadow-md sticky top-0 z-50">
+  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+    <h1 class="text-2xl font-bold text-green-700">ElderCare NGO</h1>
+
+    <!-- Desktop Nav -->
+    <nav class="hidden md:flex space-x-4">
+      <a href="index.html" class="hover:text-green-700">Home</a>
+      <a href="about.html" class="hover:text-green-700">About</a>
+      <a href="programs.html" class="hover:text-green-700">Programs</a>
+      <a href="resources.html" class="hover:text-green-700">Resources</a>
+      <a href="get-involved.html" class="hover:text-green-700">Get Involved</a>
+      <a href="contact.html" class="hover:text-green-700">Contact</a>
+      <a href="#" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Donate</a>
+    </nav>
+
+    <!-- Mobile Toggle -->
+    <button id="menuToggle" class="md:hidden text-2xl">&#9776;</button>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="hidden md:hidden bg-white border-t p-4 space-y-2">
+    <a href="index.html" class="block">Home</a>
+    <a href="about.html" class="block">About</a>
+    <a href="programs.html" class="block">Programs</a>
+    <a href="resources.html" class="block">Resources</a>
+    <a href="get-involved.html" class="block">Get Involved</a>
+    <a href="contact.html" class="block">Contact</a>
+    <a href="#" class="block text-green-700 font-bold">Donate</a>
+  </div>
+</header>
+
   <!-- Hero Section -->
   <section class="bg-green-100 py-16">
     <div class="container mx-auto px-4 text-center">
