--- a/about.html
+++ b/about.html
@@ -28,6 +28,12 @@
 
   <!-- Footer -->
   <!-- Include footer.html manually -->
+  <footer class="bg-white border-t py-6">
+    <div class="container mx-auto px-4 text-center">
+      <p>&copy; 2025 ElderCare NGO. All rights reserved.</p>
+      <p class="text-sm mt-2">Privacy | Accessibility | Terms</p>
+    </div>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
