--- a/index.html
+++ b/index.html
@@ -196,12 +196,13 @@
                         <p style="color: white;">Si tienes preguntas, necesitas ayuda o quieres colaborar, no dudes en escribirnos o llamarnos.</p>
                         <p style="color: white;"><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República Dominicana</p>
                         <p style="color: white;"><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                        <p style="color: white;"><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
+                        <p style="color: white;"><i class="fas fa-envelope"></i><a href="mailto:fuddiamsc@gmail.com"</a>fuddiamsc@gmail.com</p>
+                        
                          <div class="social-links">
-                            <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574650739876" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.facebook.com/people/Fundaci%C3%B3n-Fuddiam/pfbid0XgqqjcAB2fNRbJZ64GsWyJg1PZkweY1zjUqGkTEdT98CmBo2BQUi1b9wZityJaol/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://x.com/fuddiamsc" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/fuddiamsc/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@fuddiamsc" aria-label="YouTube"><i class="fab fa-youtube-in"></i></a>
                         </div>
                     </div>
                     <div class="contact-form">
@@ -243,10 +244,10 @@
                 <h4>FUDDIAM</h4>
                 <p>Fundación por los Derechos y Dignidad de los Adultos Mayores.</p>
                  <div class="social-links-footer">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/people/Fundaci%C3%B3n-Fuddiam/pfbid0XgqqjcAB2fNRbJZ64GsWyJg1PZkweY1zjUqGkTEdT98CmBo2BQUi1b9wZityJaol/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/fuddiamsc" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/fuddiamsc/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@fuddiamsc" aria-label="YouTube"><i class="fab fa-youtube-in"></i></a>
                 </div>
             </div>
              <div class="footer-links">
