--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
                  <h4>Contacto</h4>
                  <p><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República Dominicana</p>
                  <p><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                 <p><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
+                 <!--<p><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p> -->
+                 <p><i class="fas fa-envelope"></i><a href="mailto:fuddiamsc@gmail.com"</a>fuddiamsc@gmail.com</p>
             </div>
         </div>
         <div class="footer-bottom">
