--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FUDDIAM - Fundación por los Derechos y Dignidad de los Adultos Mayores</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Google Fonts (Example: Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -196,13 +197,12 @@
                         <p style="color: white;">Si tienes preguntas, necesitas ayuda o quieres colaborar, no dudes en escribirnos o llamarnos.</p>
                         <p style="color: white;"><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República Dominicana</p>
                         <p style="color: white;"><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                        <p style="color: white;"><i class="fas fa-envelope"></i><a href="mailto:fuddiamsc@gmail.com"</a>fuddiamsc@gmail.com</p>
-                        
+                        <p style="color: white;"><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
                          <div class="social-links">
                             <a href="https://www.facebook.com/people/Fundaci%C3%B3n-Fuddiam/pfbid0XgqqjcAB2fNRbJZ64GsWyJg1PZkweY1zjUqGkTEdT98CmBo2BQUi1b9wZityJaol/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://x.com/fuddiamsc" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/fuddiamsc/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.youtube.com/@fuddiamsc" aria-label="YouTube"><i class="fab fa-youtube-in"></i></a>
+                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="contact-form">
@@ -245,9 +245,9 @@
                 <p>Fundación por los Derechos y Dignidad de los Adultos Mayores.</p>
                  <div class="social-links-footer">
                     <a href="https://www.facebook.com/people/Fundaci%C3%B3n-Fuddiam/pfbid0XgqqjcAB2fNRbJZ64GsWyJg1PZkweY1zjUqGkTEdT98CmBo2BQUi1b9wZityJaol/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://x.com/fuddiamsc" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/fuddiamsc/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.youtube.com/@fuddiamsc" aria-label="YouTube"><i class="fab fa-youtube-in"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
              <div class="footer-links">
@@ -265,8 +265,7 @@
                  <h4>Contacto</h4>
                  <p><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República Dominicana</p>
                  <p><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                 <!--<p><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p> -->
-                 <p><i class="fas fa-envelope"></i><a href="mailto:fuddiamsc@gmail.com"</a>fuddiamsc@gmail.com</p>
+                 <p><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
             </div>
         </div>
         <div class="footer-bottom">
