--- a/index.html
+++ b/index.html
@@ -222,10 +222,12 @@
                         <h3>Ponte en contacto</h3>
                         <p style="color: white;">Si tienes preguntas, necesitas ayuda o quieres colaborar, no dudes en
                             escribirnos o llamarnos.</p>
-                        <p style="color: white;"><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República
+
+                        <!--<p style="color: white;"><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República
                             Dominicana</p>
                         <p style="color: white;"><i class="fas fa-phone"></i> +1.809.512.2377</p>
                         <p style="color: white;"><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
+                        -->
                         <div class="social-links">
                             <div class="social-links-footer">
                                 <a href="https://www.facebook.com/fuddiamsc" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -270,6 +272,7 @@
             <div class="footer-about">
                 <h4>FUDDIAM</h4>
                 <p>Fundación por los Derechos y Dignidad de los Adultos Mayores.</p>
+                <p>Nuestras redes sociales</p>
                 <div class="social-links-footer">
                     <a href="https://www.facebook.com/fuddiamsc" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://twitter.com/fuddiamsc" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>                    </a>
@@ -293,18 +296,18 @@
                     <li><a href="#noticias">Noticias</a></li>
                     <li><a href="#eventos">Evento</a></li>
                     <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="#">Política de Privacidad</a></li>
+                    <!--li><a href="#">Política de Privacidad</a></li -->
                 </ul>
             </div>
             <div class="footer-contact">
                 <h4>Contacto</h4>
                 <p><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República Dominicana</p>
                 <p><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                <p><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:fuddiamsc@gmail.com">fuddiamsc@gmail.com</a></p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>2025 © <span id="current-year"></span> FUDDIAM. Todos los derechos reservados.</p>
+            <p><span id="current-year"></span> FUDDIAM. Todos los derechos reservados.©</p>
         </div>
     </footer>
 
