--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <h2>¡Tu Apoyo Hace la Diferencia!</h2>
                 <p>Con tu donación, podemos seguir defendiendo los derechos y la dignidad de miles de adultos mayores.
                     Cada contribución cuenta.</p>
-                <a href="#" class="btn btn-primary btn-lg">Dona Ahora</a>
+                <!-- <a href="#" class="btn btn-primary btn-lg">Dona Ahora</a> -->
                 <a href="#contacto" class="btn btn-outline-light btn-lg">Sé Voluntario</a>
             </div>
         </section>
@@ -205,14 +205,7 @@
                 </div>
             </div>
         </section>
-        <!-- Video Section 
-        <div class="video-container">
-            <video controls class="responsive-video">
-                <source src="https://github.com/fuddiamsc/fuddiam/blob/main/VID-20250404-WA0135.mp4?raw=true" type="video/mp4">
-                Tu navegador no soporta la reproducción de video.
-            </video>
-        </div>
-        -->
+       
         <!-- Contact Section -->
         <section id="contacto" class="content-section">
             <div class="container">
@@ -221,13 +214,7 @@
                     <div class="contact-info">
                         <h3>Ponte en contacto</h3>
                         <p style="color: white;">Si tienes preguntas, necesitas ayuda o quieres colaborar, no dudes en
-                            escribirnos o llamarnos.</p>
-
-                        <!--<p style="color: white;"><i class="fas fa-map-marker-alt"></i> Haina, San Cristobal, República
-                            Dominicana</p>
-                        <p style="color: white;"><i class="fas fa-phone"></i> +1.809.512.2377</p>
-                        <p style="color: white;"><i class="fas fa-envelope"></i> fuddiamsc@gmail.com</p>
-                        -->
+                            escribirnos o llamarnos.</p>                        
                         <div class="social-links">
                             <div class="social-links-footer">
                                 <a href="https://www.facebook.com/fuddiamsc" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
